# convert_to_cannonical

./: .gitignore  README.md  converted-3.2.yaml  pyproject.toml  requirements.txt
scripts/: fetch_corpus.py
src/oas_canon/: __init__.py  canonical.py  cli.py  converter.py  document.py  errors.py  io.py  schema.py  validate.py  versions.py
tests/: test_cli.py  test_converter.py  test_corpus.py  test_schema_transforms.py  test_validate.py  test_version_matrix.py  test_versions.py
tests/fixtures/: petstore-3.0.json  petstore-3.0.yaml
