[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oas-canon"
version = "0.1.0"
description = "Convert OpenAPI 3.0.x / 3.1.x documents to canonical OpenAPI 3.2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
oas-canon = "oas_canon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
